start obhod.html

--- a/src/templates/pages/obhod-director.html
+++ b/src/templates/pages/obhod-director.html
@@ -98,7 +98,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="detours-detail__intro justify-content-center">
-                    <div class="col-md-10">
+                    <div class="col-lg-10">
                         <div class="detours-review__item">
                             <a href="" class="people">
                                 <div class="avatar">
@@ -131,7 +131,7 @@
         </div>
 
         <div class="row detours-detail__main">
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <div class="detours-responsible">
                     <h2 class="detours-title">Ответственный</h2>
                     <a href="" class="people">
@@ -145,7 +145,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-md-8">
+            <div class="col-lg-8">
                 <div class="detours-previous">
                     <h2 class="detours-title">Предыдущие обходы</h2>
                     <ul>
@@ -492,7 +492,7 @@
             </div>
         </div>
         <div class="row detours-analysis">
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="detours-analysis__list detours-analysis__list--success">
                     <h2 class="detours-title">Ответственный</h2>
                     <ul>
@@ -512,7 +512,7 @@
                 </div>
 
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="detours-analysis__list detours-analysis__list--danger">
                     <h2 class="detours-title">Ответственный</h2>
                     <ul>
@@ -716,6 +716,37 @@
                     <div class="swiper-button swiper-button-prev thumbs-slider-prev"></div>
                     <div class="swiper-button swiper-button-next thumbs-slider-next"></div>
                     <div class="swiper-pagination"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row justify-content-center article__footer">
+            <div class="col-xl-8 col-lg-10">
+                <div class="tags">
+                    <div class="row tags__row">
+                        <a href="#0" class="tags__item">Лонгрид</a>
+                        <a href="#0" class="tags__item">Результаты работы</a>
+                    </div>
+                </div>
+                <div class="article__footer-info">
+                    <div class="article__footer-info-item">
+                        <div class="like-item">
+                            <button class="like-item__btn like__btn"><i class="icon icon--like-gray"></i></button>
+                            <div class="like-item__count">
+                                <input type="hidden" value="5" >
+                                <div class="like-item__count-output">13</div>
+                            </div>
+                            <button class="like-item__btn dislike__btn"><i class="icon icon--dislike-gray"></i></button>
+                        </div>
+                    </div>
+                    <div class="article__footer-info-item view"><i class="icon icon--view-gray"></i>104</div>
+                    <div class="article__footer-info-item comment"><i class="icon icon--comment-gray"></i>32</div>
+                    <div class="article__footer-info-item">
+                        <button class="btn">
+                            <i class="icon icon--share-gray"></i>
+                            Поделиться
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
