--- a/src/templates/pages/obhod-managers.html
+++ b/src/templates/pages/obhod-managers.html
@@ -9,10 +9,10 @@
 
     <section class="detours-detail detours-detail--manager">
         <div class="header-block row">
-            <div class="col-md-9">
+            <div class="col-lg-9">
                 <h1>Обход управляющего директора ВМЗ цеха №1</h1>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3">
                 <!-- У оценки есть несколько модификаторов 1 бал - --disgusting, 2бала - --satisfactorily, 3 бала - --enough, 4 бала - --well, 5 балов - --perfectly -->
                 <div class="detours__mark detours__mark--perfectly">
                     <svg width="216px" height="56px" viewBox="0 0 216 56" version="1.1"
@@ -97,7 +97,7 @@
 
         </div>
         <div class="row detours-detail__main">
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <div class="detours-responsible">
                     <h2 class="detours-title">Ответственный</h2>
                     <a href="" class="people">
@@ -483,7 +483,7 @@
                 </div>
 
             </div>
-            <div class="col-md-8">
+            <div class="col-lg-8">
                 <div class="detours-review__list">
                     <h2 class="detours-title">Отзывы проверяющих</h2>
                     <div class="detours-review__item">
@@ -608,7 +608,7 @@
             </div>
         </div>
         <div class="row detours-detail__main">
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <div class="detours-responsible">
                     <h2 class="detours-title">Ответственный</h2>
                     <a href="" class="people">
@@ -994,7 +994,7 @@
                 </div>
 
             </div>
-            <div class="col-md-8">
+            <div class="col-lg-8">
                 <div class="detours-review__list">
                     <h2 class="detours-title">Отзывы проверяющих</h2>
                     <div class="detours-review__item">
@@ -1114,12 +1114,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12">
-                <hr>
-            </div>
         </div>
         <div class="row detours-analysis">
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="detours-analysis__list detours-analysis__list--success">
                     <h2 class="detours-title">Ответственный</h2>
                     <ul>
@@ -1139,7 +1136,7 @@
                 </div>
 
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="detours-analysis__list detours-analysis__list--danger">
                     <h2 class="detours-title">Ответственный</h2>
                     <ul>
@@ -1344,6 +1341,38 @@
                     <div class="swiper-button swiper-button-prev thumbs-slider-prev"></div>
                     <div class="swiper-button swiper-button-next thumbs-slider-next"></div>
                     <div class="swiper-pagination"></div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row justify-content-center article__footer">
+            <div class="col-xl-8 col-lg-10">
+                <div class="tags">
+                    <div class="row tags__row">
+                        <a href="#0" class="tags__item">Лонгрид</a>
+                        <a href="#0" class="tags__item">Результаты работы</a>
+                    </div>
+                </div>
+                <div class="article__footer-info">
+                    <div class="article__footer-info-item">
+                        <div class="like-item">
+                            <button class="like-item__btn like__btn"><i class="icon icon--like-gray"></i></button>
+                            <div class="like-item__count">
+                                <input type="hidden" value="5" >
+                                <div class="like-item__count-output">13</div>
+                            </div>
+                            <button class="like-item__btn dislike__btn"><i class="icon icon--dislike-gray"></i></button>
+                        </div>
+                    </div>
+                    <div class="article__footer-info-item view"><i class="icon icon--view-gray"></i>104</div>
+                    <div class="article__footer-info-item comment"><i class="icon icon--comment-gray"></i>32</div>
+                    <div class="article__footer-info-item">
+                        <button class="btn">
+                            <i class="icon icon--share-gray"></i>
+                            Поделиться
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
