--- a/src/templates/pages/obhod.html
+++ b/src/templates/pages/obhod.html
@@ -82,7 +82,7 @@
             <h2>Февраль</h2>
         </div>
         <div class="row detours__row">
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -157,7 +157,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -229,7 +229,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -302,7 +302,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -374,7 +374,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -449,7 +449,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -521,7 +521,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -594,7 +594,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -666,7 +666,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -741,7 +741,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -813,7 +813,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -886,7 +886,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -958,7 +958,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -1033,7 +1033,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -1105,7 +1105,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -1178,7 +1178,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -1250,7 +1250,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -1325,7 +1325,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -1397,7 +1397,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -1470,7 +1470,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -1542,7 +1542,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -1617,7 +1617,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -1689,7 +1689,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -1762,7 +1762,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -1834,7 +1834,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -1909,7 +1909,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -1981,7 +1981,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -2054,7 +2054,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -2126,7 +2126,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -2201,7 +2201,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -2273,7 +2273,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -2346,7 +2346,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -2418,7 +2418,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -2493,7 +2493,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -2565,7 +2565,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -2638,7 +2638,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -2710,7 +2710,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -2785,7 +2785,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -2857,7 +2857,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
@@ -2930,7 +2930,7 @@
                                 </span>
                 </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <a href="#0" class="detours-card">
                     <div class="detours-card__header">
                         <div class="card-date">10 фев</div>
