--- a/src/styles/pages/obhod.scss
+++ b/src/styles/pages/obhod.scss
@@ -3,11 +3,48 @@
 
     .detours {
         margin-bottom: 17px;
+        @media (max-width: $media-md){
+            margin-bottom: 32px;
+        }
     }
 
     .detours-card {
         margin-bottom: 31px;
+        @media (max-width: $media-lg){
+            width: 100%;
+            margin-bottom: 24px;
+        }
+        @media(max-width: $media-md){
+            margin-bottom: 0;
+            padding: 16px;
+            width: auto;
+            margin-right: -16px;
+            margin-left: -16px;
+            border-radius: 0;
+            border-left: 0;
+            border-right: 0;
+            border-top: 0;
+            max-width: none;
+            min-height: auto;
+            .detours-card__mark{
+                margin-bottom: 6px;
+            }
+            .detours-card__title{
+                margin-bottom: 16px;
+
+            }
+
+        }
     }
+
+    @media (max-width: $media-md){
+        .detours__row div:last-child {
+            .detours-card{
+                border-bottom: 0;
+            }
+        }
+    }
+
 
     .news__row {
         margin-bottom: 40px;
@@ -67,10 +104,16 @@
     .header-block {
         align-items: flex-start;
         margin-bottom: 32px;
+        @media (max-width: $media-lg){
+            margin-bottom: 24px;
+        }
 
         .detours__mark {
             margin-left: auto;
             margin-right: 0;
+            @media (max-width: $media-lg){
+                margin-top: 24px;
+            }
 
             &--disgusting {
                 .detours__mark-border {
@@ -176,10 +219,21 @@
         justify-content: flex-start;
         width: 100%;
         margin-bottom: 32px;
+        @media (max-width: $media-lg){
+            margin-bottom: 8px;
+        }
 
         &-item {
             &:first-of-type {
                 margin-left: 0;
+                @media (max-width: $media-lg){
+                    display: none;
+                }
+            }
+            @media(max-width: $media-lg){
+                &:nth-of-type(2){
+                    margin-left: 0;
+                }
             }
         }
     }
@@ -192,6 +246,10 @@
 
     .detours-responsible {
         margin-bottom: 48px;
+        @media (max-width: $media-lg){
+            width: 100%;
+            margin-bottom: 32px;
+        }
 
         .people {
             max-width: 296px;
@@ -208,6 +266,9 @@
 
     .detours-current {
         margin-bottom: 48px;
+        @media (max-width: $media-lg){
+            margin-bottom: 32px;
+        }
         .detours-title {
             margin-bottom: 8px;
         }
@@ -241,12 +302,18 @@
     }
 
     .detours-previous {
+        @media (max-width: $media-lg){
+            margin-bottom: 32px;
+        }
         .detours-title {
             margin-bottom: 8px;
         }
 
         &__item {
             max-width: 256px;
+            @media (max-width: $media-lg){
+                max-width: 100%;
+            }
             &:last-of-type {
                 .detours-previous__link {
                     border-bottom: 0;
@@ -345,11 +412,18 @@
     }
 
     .detours-analysis {
+        @media (max-width: $media-lg){
+            margin-bottom: 24px;
+        }
 
         &__list {
             margin: 0 0 64px;
             padding: 16px 24px 24px 20px;
             border-radius: 5px;
+            @media (max-width: $media-lg){
+                margin-bottom: 24px;
+                padding:16px 24px 20px 20px ;
+            }
 
             .detours-title {
                 font-size: rem(16);
@@ -413,6 +487,18 @@
         padding-top: 48px;
         padding-bottom: 48px;
         margin-bottom: 48px;
+        @media (max-width: $media-lg){
+            border: none;
+            border-bottom: 1px solid $border-10;
+            border-radius: 0;
+            padding-top: 0;
+            padding-bottom: 24px;
+            margin-bottom: 32px;
+            margin-right: -16px;
+            margin-left: -16px;
+            padding-left: 16px;
+            padding-right: 16px;
+        }
 
         .detours-review__item {
             padding: 0;
@@ -437,6 +523,10 @@
                     margin-bottom: 0;
                 }
             }
+            @media (max-width: $media-lg){
+                font-size: rem(18);
+                line-height: 1.56;
+            }
         }
     }
 
@@ -450,6 +540,9 @@
     &--director {
         .detours-detail__main {
             margin-bottom: 56px;
+            @media(max-width: $media-lg){
+                margin-bottom: 0;
+            }
             hr {
                 display: none;
             }
@@ -460,9 +553,16 @@
         .article__header-info {
             padding-bottom: 16px;
             border-bottom: 1px solid $border-10;
+            @media(max-width: $media-lg){
+                border-bottom: 0;
+                padding-bottom: 0;
+            }
         }
         .detours-detail__main {
             margin-bottom: 56px;
+            @media(max-width: $media-lg){
+                margin-bottom: 24px;
+            }
             hr {
                 margin-top: 48px;
                 margin-bottom: 0;
@@ -476,6 +576,9 @@
 .detours-review {
 
     &__list {
+        @media (max-width: $media-lg){
+            margin-bottom: 24px;
+        }
 
         .detours-title {
             margin-bottom: 8px;
@@ -489,6 +592,9 @@
         padding: 24px 0;
         .people {
             margin-bottom: 12px;
+            @media (max-width: $media-lg){
+                max-width: calc(100% - 56px);
+            }
         }
         .rating {
             position: absolute;
@@ -549,11 +655,21 @@
             margin: 0;
             padding: 0;
             list-style: none;
+            @media (max-width: $media-lg){
+                display: flex;
+                align-items: flex-start;
+                padding-right: 40px;
+                flex-wrap: wrap;
+            }
         }
     }
 
     &__item {
         margin-bottom: 16px;
+        @media (max-width: $media-lg){
+            margin-right:4px ;
+            width: calc(33.3333% - 4px);
+        }
         &:last-of-type {
             margin-bottom: 0;
         }
