and responsive obhod and ps

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -28,3 +28,4 @@
 @import 'modules/ads-modals-remove/ads-modals-remove';
 @import 'modules/gallaryPopup-ads/gallaryPopup-ads';
 @import 'modules/calendar/calendar';
+@import 'modules/obhod-floating-bar/obhod-floating-bar';
