--- a/src/templates/pages/obhod.html
+++ b/src/templates/pages/obhod.html
@@ -3006,7 +3006,9 @@
     </section>
 
     <div class="row news__row">
-        <a href="#0" class="btn btn--dark">Показать еще</a>
+        <div class="col-12">
+            <a href="#0" class="btn btn--dark">Показать еще</a>
+        </div>
     </div>
 
     <section class="detours">
@@ -3246,7 +3248,9 @@
     </section>
 
     <div class="row news__row">
-        <a href="#0" class="btn btn--dark">Показать еще</a>
+        <div class="col-12">
+            <a href="#0" class="btn btn--dark">Показать еще</a>
+        </div>
     </div>
 
 
