--- a/src/blocks/modules/card/card.scss
+++ b/src/blocks/modules/card/card.scss
@@ -485,6 +485,10 @@
         transform: translateY(-8px);
         text-decoration: none;
         box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.05);
+        @media (max-width: $media-md){
+            transform: none;
+            box-shadow: none;
+        }
     }
 
     &__header {
