--- a/src/templates/pages/obhod-director.html
+++ b/src/templates/pages/obhod-director.html
@@ -6,7 +6,7 @@
             {% include 'breadcrumbs/breadcrumbs.html' %}
         </div>
     </div>
-
+    {% include 'obhod-floating-bar/obhod-floating-bar.html' %}
     <section class="detours-detail detours-detail--director">
         <div class="header-block row">
             <div class="col-md-9">
