--- a/src/styles/pages/news.scss
+++ b/src/styles/pages/news.scss
@@ -231,6 +231,7 @@
                 padding-left: 16px;
                 margin-left: -16px;
                 margin-right: -16px;
+                padding-right: 16px;
             }
         }
 
