--- a/src/templates/pages/ps-main.html
+++ b/src/templates/pages/ps-main.html
@@ -77,10 +77,12 @@
     </div>
 
     <section class="detours">
-        <div class="row header-block">
-            <h2>Обходы</h2>
-            <div class="header-block__btn">
-                <a href="obhod.html" class="btn">Все <span>обходы</span> <i class="btn__icon btn__icon--right btn__icon--arrow-right"></i></a>
+        <div class="row ">
+            <div class="col-12 header-block">
+                <h2>Обходы</h2>
+                <div class="header-block__btn">
+                    <a href="obhod.html" class="btn">Все <span>обходы</span> <i class="btn__icon btn__icon--right btn__icon--arrow-right"></i></a>
+                </div>
             </div>
         </div>
         <div class="row detours__row">
