--- a/src/styles/pages/obhod.scss
+++ b/src/styles/pages/obhod.scss
@@ -48,7 +48,7 @@
             .detours-card__header {
                 order: 1;
                 margin-bottom: 0;
-                margin-top: 16px;
+                margin-top: 0;
             }
             .detours-card__footer {
                 justify-content: flex-end;
@@ -61,6 +61,9 @@
 
     .news__row {
         margin-bottom: 40px;
+        @media(max-width: 520px) {
+            margin-bottom: 32px;
+        }
 
         .results-nav__select {
             margin-right: 16px;
@@ -210,6 +213,7 @@
                 font-family: $font-family-base;
                 font-weight: $font-weight-bold;
                 line-height: 1.43;
+                transform: translateY(1px);
             }
         }
 
@@ -225,6 +229,10 @@
         h1 {
             font-size: rem(40);
             line-height: 1.2;
+            @media (max-width: $media-lg) {
+                font-size: rem(32);
+                line-height: rem(40);
+            }
         }
     }
 
@@ -233,7 +241,7 @@
         width: 100%;
         margin-bottom: 32px;
         @media (max-width: $media-lg) {
-            margin-bottom: 8px;
+            margin-bottom: 24   px;
         }
 
         &-item {
@@ -266,6 +274,12 @@
 
         .people {
             max-width: 296px;
+            @media (max-width: $media-lg) {
+                align-items: center;
+                .content {
+                    padding-top: 0;
+                }
+            }
 
             .avatar {
                 width: 96px;
@@ -493,6 +507,24 @@
         }
     }
 
+    .thumbs-slider {
+        @media (max-width: $media-lg) {
+            margin-top: 24px;
+            margin-bottom: 48px;
+        }
+    }
+    .article__footer {
+        @media(max-width: $media-md) {
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+    }
+    .comments {
+        @media (max-width: $media-lg) {
+            margin-bottom: 8px;
+        }
+    }
+
     &__intro {
         display: flex;
         border: solid 1px $border-10;
@@ -658,7 +690,6 @@
         @media (max-width: $media-md) {
             border-top: 1px solid $border-10;
             margin-bottom: 0;
-            padding-top: 20px;
         }
         .title {
             margin-bottom: 16px;
@@ -669,13 +700,15 @@
             color: $text-black;
             @media (max-width: $media-md) {
                 cursor: pointer;
-                margin-bottom: 20px;
+                padding-top: 20px;
+                padding-bottom: 20px;
                 position: relative;
+                margin-bottom: 0;
 
                 &:after {
                     content: '';
                     position: absolute;
-                    top: 0;
+                    top: 20px;
                     right: 0;
                     width: 24px;
                     height: 24px;
