--- a/src/styles/pages/results.scss
+++ b/src/styles/pages/results.scss
@@ -801,6 +801,7 @@
 
         &__links {
             margin: 0 220px;
+            z-index: 10;
             @media (max-width: $media-lg) {
                 display: flex;
                 padding-right: 16px;
